Added Kbc payment method

--- a/app/locale/en_US/TIG_Buckaroo3Extended.csv
+++ b/app/locale/en_US/TIG_Buckaroo3Extended.csv
@@ -167,3 +167,4 @@
 "TIG_Buckaroo3Extended::Private","Private"
 "TIG_Buckaroo3Extended::Company","Company"
 "TIG_Buckaroo3Extended::One-man business","One-man business"
+"KBC / CBC","KBC / CBC"
