--- a/app/locale/en_US/TIG_Buckaroo3Extended.csv
+++ b/app/locale/en_US/TIG_Buckaroo3Extended.csv
@@ -168,3 +168,4 @@
 "TIG_Buckaroo3Extended::Company","Company"
 "TIG_Buckaroo3Extended::One-man business","One-man business"
 "KBC / CBC","KBC / CBC"
+"Przelewy24","Przelewy24"
