--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -382,3 +382,4 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "TIG_Buckaroo3Extended::Company","Bedrijf"
 "TIG_Buckaroo3Extended::One-man business","Eenmanszaak"
 "KBC / CBC","KBC / CBC"
+"Przelewy24","Przelewy24"
