--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -381,3 +381,5 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "TIG_Buckaroo3Extended::Private","Particulier"
 "TIG_Buckaroo3Extended::Company","Bedrijf"
 "TIG_Buckaroo3Extended::One-man business","Eenmanszaak"
+"In3 version","In3 versie"
+"The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
