--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -385,3 +385,5 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Przelewy24","Przelewy24"
 "In3 version","In3 versie"
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
+"Afterpay (old)","Afterpay (oud)"
+"Afterpay 2 (old)","Afterpay 2 (oud)"
