--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -387,3 +387,4 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
 "Afterpay (old)","Afterpay (oud)"
 "Afterpay 2 (old)","Afterpay 2 (oud)"
+"(Or click here for the French translation: %sterms and condition%s.)","(Of klik hier voor de Franse vertaling:: %saanvullende voorwaarden%s.)"
