BUCKM1-571 - add cards + javascript for changing images

--- a/app/locale/de_AT/TIG_Buckaroo3Extended.csv
+++ b/app/locale/de_AT/TIG_Buckaroo3Extended.csv
@@ -1,1 +1,21 @@
 "%sInvoice payment terms%s","%sRechnungsbedingungen%s"
+"%sInvoice payment terms%s","%sRechnungsbedingungen%s"
+"Card number","Kartennummer"
+"Expiration","Ablaufdatum"
+"Select a month","Wählen Sie einen Monat aus"
+"January","Januar"
+"February","Februar"
+"March","März"
+"April","April"
+"May","Mai"
+"June","Juni"
+"July","Juli"
+"August","August"
+"September","September"
+"October","Oktober"
+"November","November"
+"December","Dezember"
+"Year: XXXX","Jahr: XXXX"
+"Name cardholder","Name Karteninhaber"
+"Name","Name"
+"Security code","Code"
