--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -385,3 +385,22 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Przelewy24","Przelewy24"
 "In3 version","In3 versie"
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
+"Card number","Kaartnummer"
+"Expiration","Vervaldatum"
+"Select a month","Selecteer een maand"
+"January","januari"
+"February","februari"
+"March","maart"
+"April","april"
+"May","mei"
+"June","juni"
+"July","juli"
+"August","augustus"
+"September","september"
+"October","oktober"
+"November","november"
+"December","december"
+"Year: XXXX","Jaar: XXXX"
+"Name cardholder","Naam kaarthouder"
+"Name","Naam"
+"Security code","Code"
