BUCKM1-576 : miss. translation added, miss. is not selected as default anymore

--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -155,6 +155,7 @@
 "Billing name","Naam op factuuradres"
 "Mr.","Heer"
 "Mrs.","Mevrouw"
+"Miss.","Mevrouw"
 "E-mail address","E-mail adres"
 "You will receive an email with further payment instructions when you place your order.","Na het plaatsen van uw order ontvangt u een email met de gegevens voor betaling."
 " (Excl. Tax)"," (Excl. btw)"
