BUCKmM1-571 tooltip + image size bigger

--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -388,19 +388,19 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Card number","Kaartnummer"
 "Expiration","Vervaldatum"
 "Select a month","Selecteer een maand"
-"January","januari"
-"February","februari"
-"March","maart"
-"April","april"
-"May","mei"
-"June","juni"
-"July","juli"
-"August","augustus"
-"September","september"
-"October","oktober"
-"November","november"
-"December","december"
+"01 - January","01 - januari"
+"02 - February","02 - februari"
+"03 - March","03 - maart"
+"04 - April","04 - april"
+"05 - May","05 - mei"
+"06 - June","06 - juni"
+"07 - July","07 - juli"
+"08 - August","08 - augustus"
+"09 - September","09 - september"
+"10 - October","10 - oktober"
+"11 - November","11 - november"
+"12 - December","12 - december"
 "Year: XXXX","Jaar: XXXX"
 "Name cardholder","Naam kaarthouder"
 "Name","Naam"
-"Security code","Code"
+"Security code","CVV / CVC Code"
