--- a/app/locale/de_DE/TIG_Buckaroo3Extended.csv
+++ b/app/locale/de_DE/TIG_Buckaroo3Extended.csv
@@ -2,19 +2,19 @@
 "Card number","Kartennummer"
 "Expiration","Ablaufdatum"
 "Select a month","Wählen Sie einen Monat aus"
-"January","Januar"
-"February","Februar"
-"March","März"
-"April","April"
-"May","Mai"
-"June","Juni"
-"July","Juli"
-"August","August"
-"September","September"
-"October","Oktober"
-"November","November"
-"December","Dezember"
+"01 - January","01 - Januar"
+"02 - February","02 - Februar"
+"03 - March","03 - März"
+"04 - April","04 - April"
+"05 - May","05 - Mai"
+"06 - June","06 - Juni"
+"07 - July","07 - Juli"
+"08 - August","08 - August"
+"09 - September","09 - September"
+"10 - October","10 - Oktober"
+"11 - November","11 - November"
+"12 - December","12 - Dezember"
 "Year: XXXX","Jahr: XXXX"
 "Name cardholder","Name Karteninhaber"
 "Name","Name"
-"Security code","Code"
+"Security code","CVV / CVC Code"
