--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -404,3 +404,4 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Name cardholder","Naam kaarthouder"
 "Name","Naam"
 "Security code","CVV / CVC Code"
+'Or "CVV" or "CVC". <br/><br/> A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','Of "CVV" of "CVC". <br/> <br/> Een code van 3 cijfers rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer.'
