BUCKM1-571 - change logos and add extra selectbox

--- a/app/locale/de_AT/TIG_Buckaroo3Extended.csv
+++ b/app/locale/de_AT/TIG_Buckaroo3Extended.csv
@@ -3,6 +3,7 @@
 "Card number","Kartennummer"
 "Expiration","Ablaufdatum"
 "Select a month","Wählen Sie einen Monat aus"
+"Month","Monat"
 "01 - January","01 - Januar"
 "02 - February","02 - Februar"
 "03 - March","03 - März"
@@ -15,7 +16,7 @@
 "10 - October","10 - Oktober"
 "11 - November","11 - November"
 "12 - December","12 - Dezember"
-"Year: XXXX","Jahr: XXXX"
+"Year","Jahr"
 "Name cardholder","Name Karteninhaber"
 "Name","Name"
 "Security code","CVV / CVC Code"
