--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -400,8 +400,9 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "10 - October","10 - oktober"
 "11 - November","11 - november"
 "12 - December","12 - december"
-"Year: XXXX","Jaar: XXXX"
+"Year","Jaar"
 "Name cardholder","Naam kaarthouder"
 "Name","Naam"
 "Security code","CVV / CVC Code"
 'Or "CVV" or "CVC". <br/><br/> A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','Of "CVV" of "CVC". <br/> <br/> Een code van 3 cijfers rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer.'
+"Month","Maand"
