--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -410,3 +410,4 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Enable or disable creditcard design.","Schakel het creditcardontwerp in of uit."
 "Month","Maand"
 "Card type","Kaarttype"
+"Please select a card","Selecteer een kaart"
