--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -404,7 +404,8 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Name cardholder","Naam kaarthouder"
 "Name","Naam"
 "Security code","CVV / CVC Code"
-'Or "CVV" or "CVC". <br/><br/> A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','Of "CVV" of "CVC". <br/> <br/> Een code van 3 cijfers rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer.'
+"CVV or CVC. <br/><br/>","CVV of CVC. <br/><br/>"
+"A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.","Een code van 3 cijfers rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer."
 "Select accepted credit cards.","Selecteer geaccepteerde creditcards."
 "Accepted creditcards","Geaccepteerde creditcards"
 "Enable or disable creditcard design.","Schakel het creditcardontwerp in of uit."
