changed card issuers to just 'card' in checkout

--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -410,7 +410,7 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Accepted creditcards","Geaccepteerde creditcards"
 "Enable or disable creditcard design.","Schakel het creditcardontwerp in of uit."
 "Month","Maand"
-"Card type","Kaarttype"
+"Card","Kaart"
 "Please choose","Kies een kaart"
 "Select a year","Kies een jaar"
 "Select a month","Kies een maand"
