--- a/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
+++ b/app/locale/nl_NL/TIG_Buckaroo3Extended.csv
@@ -407,9 +407,9 @@ TIG_Buckaroo3Extended::Fee label, Betaaltoeslag label
 "Year","Jaar"
 "Name cardholder","Naam kaarthouder"
 "Name","Naam"
-"Security code","CVV / CVC Code"
 "CVV or CVC. <br/><br/>","CVV of CVC. <br/><br/>"
 "A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.","Een code van 3 cijfers rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer."
+"Security code","Beveiligingscode"
 "Select accepted credit cards.","Selecteer geaccepteerde creditcards."
 "Accepted creditcards","Geaccepteerde creditcards"
 "Enable or disable creditcard design.","Schakel het creditcardontwerp in of uit."
