--- a/app/locale/de_AT/TIG_Buckaroo3Extended.csv
+++ b/app/locale/de_AT/TIG_Buckaroo3Extended.csv
@@ -2,7 +2,6 @@
 "%sInvoice payment terms%s","%sRechnungsbedingungen%s"
 "Card number","Kartennummer"
 "Expiration","Ablaufdatum"
-"Select a month","Wählen Sie einen Monat aus"
 "Month","Monat"
 "01 - January","01 - Januar"
 "02 - February","02 - Februar"
@@ -19,6 +18,11 @@
 "Year","Jahr"
 "Name cardholder","Name Karteninhaber"
 "Name","Name"
-"Security code","CVV / CVC Code"
-'Or "CVV" or "CVC". <br/><br/> A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','Oder "CVV" oder "CVC". <br/> <br/> Ein dreistelliger Code, der sich rechts neben dem Unterschriftenstreifen auf der Rückseite Ihrer Karte befindet, getrennt von der Kartennummer.'
+"Card","Karte"
+"Please choose","wähle eine Karte"
+"Select a month","Wähle einen Monat"
+"Select a year","Wähle ein Jahr"
+'CVV or CVC. <br/><br/>','"CVV" or "CVC". <br/><br/>'
+'A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.'
 "Card type","Kreditkartentyp"
+"Security code","Sicherheitscode"
