--- a/app/locale/de_AT/TIG_Buckaroo3Extended.csv
+++ b/app/locale/de_AT/TIG_Buckaroo3Extended.csv
@@ -23,6 +23,6 @@
 "Select a month","Wähle einen Monat"
 "Select a year","Wähle ein Jahr"
 'CVV or CVC. <br/><br/>','"CVV" or "CVC". <br/><br/>'
-'A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.','A 3-digit code located to the right of signature strip on the back of your card, separate from the card number.'
+'A 3 or 4 digit code located to the right of signature strip on the back of your card, separate from the card number.','Ein 3- oder 4-stelliger Code befindet sich auf der Rückseite Ihrer Karte.'
 "Card type","Kreditkartentyp"
 "Security code","Sicherheitscode"
